<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.activity.LoginActivity"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:paddingTop="25dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorDarkBlue"
        android:text="@string/weltome_title"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="35dp"/>

    <com.example.market_observer_android.presentation.view.StyledEditText
        android:id="@+id/login_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/email"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp"/>

    <com.example.market_observer_android.presentation.view.StyledEditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/password"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.market_observer_android.presentation.view.StyledButton
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"/>

        <com.example.market_observer_android.presentation.view.StyledButton
            android:id="@+id/register_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

    </LinearLayout>

</LinearLayout>