<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:id="@+id/styled_et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:layout_marginStart="5dp"
        tools:text="url"/>

    <EditText
        android:id="@+id/styled_et_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/styled_edit_text"
        android:padding="10dp"/>

</LinearLayout>